<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 http://maven.apache.org/xsd/maven-4.1.0.xsd">
    <modelVersion>4.1.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
    </parent>

    <groupId>ca.zhoozhoo.load-development</groupId>
    <artifactId>spring-load-development-parent</artifactId>
    <version>0.0.8-SNAPSHOT</version>
    <name>Spring Load Development Parent</name>
    <description>Parent Project for Spring Load Development</description>
    <packaging>pom</packaging>

    <subprojects>
        <subproject>spring-loaddev-config-server</subproject>
        <subproject>spring-loaddev-discovery-server</subproject>
        <subproject>spring-loaddev-loads-service</subproject>
        <subproject>spring-loaddev-rifles-service</subproject>
        <subproject>spring-loaddev-mcp-server</subproject>
        <subproject>spring-loaddev-admin-server</subproject>
        <subproject>spring-loaddev-api-gateway</subproject>
        <subproject>spring-loaddev-components-service</subproject>
    </subprojects>

    <properties>
        <java.version>25</java.version>
        <spring-boot.version>3.5.7</spring-boot.version>
        <spring-boot-admin.version>3.5.5</spring-boot-admin.version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
        <spring-ai.version>1.1.0-M3</spring-ai.version>
        <springdoc.version>2.8.13</springdoc.version>
        <r2dbc-postgresql.version>1.1.0.RELEASE</r2dbc-postgresql.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <opentelemetry-instrumentation.version>2.21.0</opentelemetry-instrumentation.version>
        <opentelemetry-instrumentation.version.alpha>2.21.0-alpha</opentelemetry-instrumentation.version.alpha>
    </properties>

    <scm>
        <developerConnection>scm:git:git@github.com:zhoozhoo/spring-load-development.git</developerConnection>
        <tag>v0.0.7</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-instrumentation-bom</artifactId>
                <version>${opentelemetry-instrumentation.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-instrumentation-bom-alpha</artifactId>
                <version>${opentelemetry-instrumentation.version.alpha}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                    <preparationGoals>clean verify antrun:run@update-helm-versions</preparationGoals>
                    <completionGoals>antrun:run@update-helm-versions</completionGoals>
                    <!-- Allow modification of these files during release -->
                    <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                    <!-- Include all modified files in commits -->
                    <scmCommentPrefix>[maven-release-plugin] </scmCommentPrefix>
                    <scmReleaseCommitComment>@{prefix} prepare release @{releaseLabel}</scmReleaseCommitComment>
                    <scmDevelopmentCommitComment>@{prefix} prepare for next development iteration</scmDevelopmentCommitComment>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <inherited>false</inherited>
                <executions>
                    <execution>
                        <id>update-helm-versions</id>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <echo message="Updating all versions to ${project.version}" />

                                <!-- Update .env -->
                                <replaceregexp file=".env" match="^PROJECT_VERSION=.*" replace="PROJECT_VERSION=${project.version}" byline="true" />

                                <!-- Update Chart.yaml -->
                                <replaceregexp file="helm/spring-load-development/Chart.yaml" match="^version:.*" replace="version: ${project.version}" byline="true" />
                                <replaceregexp file="helm/spring-load-development/Chart.yaml" match="^appVersion:.*" replace="appVersion: ${project.version}" byline="true" />

                                <!-- Fix README.adoc - Target the specific broken pattern -->
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="spring-loaddev--SNAPSHOT:[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?" replace="spring-loaddev-api-gateway:${project.version}" flags="g" />

                                <!-- Update README.adoc - All correct microservice image references -->
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="spring-loaddev-api-gateway:[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?" replace="spring-loaddev-api-gateway:${project.version}" flags="g" />
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="spring-loaddev-loads-service:[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?" replace="spring-loaddev-loads-service:${project.version}" flags="g" />
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="spring-loaddev-components-service:[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?" replace="spring-loaddev-components-service:${project.version}" flags="g" />
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="spring-loaddev-rifles-service:[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?" replace="spring-loaddev-rifles-service:${project.version}" flags="g" />
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="spring-loaddev-mcp-server:[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?" replace="spring-loaddev-mcp-server:${project.version}" flags="g" />

                                <!-- Update README.adoc - Chart metadata -->
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="(\* \*Chart Version\*: )[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?" replace="\1${project.version}" flags="g" />
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="(\* \*App Version\*: )[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?" replace="\1${project.version}" flags="g" />

                                <!-- Update README.adoc - YAML configuration examples -->
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="(imageTag: &quot;)[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?(&quot;)" replace="\1${project.version}\3" flags="g" />
                                <replaceregexp file="helm/spring-load-development/README.adoc" match="(tag: &quot;)[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?(&quot;)" replace="\1${project.version}\3" flags="g" />

                                <!-- Update values.yaml -->
                                <replaceregexp file="helm/spring-load-development/values.yaml" match="(repository: zhoozhoo\.ca/spring-load-development/spring-loaddev-[\w-]+[\s\S]*?tag: &quot;)[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?(&quot;)" replace="\1${project.version}\3" flags="gs" />

                                <!-- Update values.yaml - Global imageTag -->
                                <replaceregexp file="helm/spring-load-development/values.yaml" match="(global:[\s\S]*?imageTag: &quot;)[0-9]+\.[0-9]+\.[0-9]+(-SNAPSHOT)?(&quot;)" replace="\1${project.version}\3" flags="gs" />

                                <echo message="All versions updated to ${project.version}" />
                                
                                <!-- Add updated files to git -->
                                <exec executable="git">
                                    <arg value="add" />
                                    <arg value=".env" />
                                    <arg value="helm/spring-load-development/Chart.yaml" />
                                    <arg value="helm/spring-load-development/README.adoc" />
                                    <arg value="helm/spring-load-development/values.yaml" />
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <image>
                        <name>
                            zhoozhoo.ca/spring-load-development/${project.artifactId}:${project.version}</name>
                        <buildpacks>
                            <buildpack>docker.io/paketobuildpacks/adoptium</buildpack>
                            <buildpack>docker.io/paketobuildpacks/java</buildpack>
                            <buildpack>docker.io/paketobuildpacks/health-checker</buildpack>
                        </buildpacks>
                        <env>
                            <BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
                            <BP_HEALTH_CHECKER_ENABLED>true</BP_HEALTH_CHECKER_ENABLED>
                        </env>
                    </image>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>build-image</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>